website/myAccolades/style.css
html, body {
  margin: 0;
  padding: 0;
}
canvas {
  display: block;
  overflow: hidden;
}
#table {
  width: 70%;
}
#sketch-container {
  /* background-image: url('https://wsprung.github.io/whitneysArchive/website/assets/bookshelfOneRow.png'); */
  background-color: black;
}
#row1 {
  position: absolute;
  left: 20px;
  top: -67px;
  /* justify-content: space-around; figure this out */
}
#articleIcon {
  position: relative;
  top: 65px;
  left: 50px;
}
#ccDescript {
  /* display: hidden; */
  position: relative;
  top: 65px;
  left: 50px;
}
#nmsDescript {
  /* visibility: collapse; */
  /* display: hidden; */
  position: relative;
  top: 65px;
  left: 50px;
}
#articleIconLight {
  position: relative;
  top: 65px;
  left: 50px;
}
#flowerIcon {
  position: relative;
  top: 14px;
}
#row2 {
  position: absolute;
  top: 475px;
  left: 20px;
}
#awardBadgeIcon {
  position: relative;
  left: 180px;
}
#awardIcon2 {
  position: relative;
  left: 490px;
}
#articleIcon2 {
  position: relative;
  top: 55px;
  left: 360px;
}
/* {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-around;
	align-items: baseline;
	align-content: stretch;
} */

